--- a/app/src/main/res/layout/activity_my_bills.xml
+++ b/app/src/main/res/layout/activity_my_bills.xml
@@ -13,12 +13,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/materialToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:menu="@menu/top_nav"
+            app:navigationIcon="@drawable/ic_menu"
+            app:title="SmartStackBills"
+            app:titleCentered="true" />
 
         <com.google.android.material.button.MaterialButtonToggleGroup
             android:id="@+id/toggleButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:ignore="MissingConstraints">
+            app:layout_constraintTop_toBottomOf="@id/materialToolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
         </com.google.android.material.button.MaterialButtonToggleGroup>
 
@@ -28,8 +41,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/incoming"
-            tools:layout_editor_absoluteX="-1dp"
-            tools:layout_editor_absoluteY="56dp" />
+            app:layout_constraintTop_toBottomOf="@id/toggleButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/button2"
+            app:layout_constraintHorizontal_chainStyle="spread" />
 
         <Button
             android:id="@+id/button2"
@@ -37,8 +52,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/due"
-            tools:layout_editor_absoluteX="108dp"
-            tools:layout_editor_absoluteY="57dp" />
+            app:layout_constraintTop_toBottomOf="@id/toggleButton"
+            app:layout_constraintStart_toEndOf="@id/button1"
+            app:layout_constraintEnd_toStartOf="@id/button3"
+            app:layout_constraintHorizontal_chainStyle="spread" />
 
         <Button
             android:id="@+id/button3"
@@ -46,8 +63,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/reocurring"
-            tools:layout_editor_absoluteX="194dp"
-            tools:layout_editor_absoluteY="57dp" />
+            app:layout_constraintTop_toBottomOf="@id/toggleButton"
+            app:layout_constraintStart_toEndOf="@id/button2"
+            app:layout_constraintEnd_toStartOf="@id/button4"
+            app:layout_constraintHorizontal_chainStyle="spread" />
 
         <Button
             android:id="@+id/button4"
@@ -55,30 +74,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/paid"
-            tools:layout_editor_absoluteX="324dp"
-            tools:layout_editor_absoluteY="57dp" />
+            app:layout_constraintTop_toBottomOf="@id/toggleButton"
+            app:layout_constraintStart_toEndOf="@id/button3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <com.google.android.material.appbar.MaterialToolbar
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:menu="@menu/top_nav"
-        app:navigationIcon="@drawable/ic_menu"
-        app:title="SmartStackBills"
-        app:titleCentered="true" />
-
-    <com.google.android.material.button.MaterialButtonToggleGroup
-        android:id="@+id/toggleButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="DuplicateIds">
-
-    </com.google.android.material.button.MaterialButtonToggleGroup>
-
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBarFab"
@@ -116,6 +116,5 @@
         android:text="@string/you_still_do_not_have_any_bill_registered"
         app:layout_anchor="@+id/constraintLayout"
         app:layout_anchorGravity="center" />
-
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
