--- a/app/src/main/res/layout/activity_my_bills.xml
+++ b/app/src/main/res/layout/activity_my_bills.xml
@@ -32,7 +32,6 @@
             app:layout_constraintTop_toBottomOf="@id/materialToolbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
-
         </com.google.android.material.button.MaterialButtonToggleGroup>
 
         <Button
@@ -78,43 +77,48 @@
             app:layout_constraintStart_toEndOf="@id/button3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottomAppBarFab"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        app:fabCradleMargin="20dp"
-        app:fabCradleVerticalOffset="10dp"
-        app:fabCradleRoundedCornerRadius="20dp">
+        <Button
+            android:id="@+id/btnCreate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="314dp"
+            android:layout_marginBottom="210dp"
+            android:background="@drawable/btnlogin"
+            android:text="Create"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button2" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:id="@+id/bottomNavigationView"
-            android:layout_marginEnd="16dp"
-            android:background="@android:color/transparent"
-            app:elevation="0dp"
-            app:menu="@menu/bottom_nav_fab" />
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            app:itemIconTint="@color/black"
+            app:itemTextColor="#000000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/bottom_nav">
 
-    </com.google.android.material.bottomappbar.BottomAppBar>
+        </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:backgroundTint="#0098FF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_add"
-        app:layout_anchor="@id/bottomAppBarFab" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/you_still_do_not_have_any_bill_registered"
-        app:layout_anchor="@+id/constraintLayout"
+        app:layout_anchor="@id/constraintLayout"
         app:layout_anchorGravity="center" />
+
+
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
