--- a/app/src/main/res/layout/activity_create_bill.xml
+++ b/app/src/main/res/layout/activity_create_bill.xml
@@ -8,13 +8,110 @@
     tools:context=".createBill">
 
 
+    <Button
+        android:id="@+id/btnGuardar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="89dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/btnlogin"
+        android:text="@string/save"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnCancel" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="24dp"
+        android:text="@string/create_new_bill"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/edtComments"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/edt_background"
+        android:ems="10"
+        android:hint="@string/write_your_comments"
+        android:inputType="text"
+        android:maxLength="30"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:textColorHint="#A5A5A5"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
+        app:layout_constraintEnd_toEndOf="@+id/btnGuardar"
+        app:layout_constraintStart_toStartOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <Spinner
+        android:id="@+id/spinnerCategories"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtVendor"
+        app:layout_constraintEnd_toEndOf="@+id/spinnerVendors"
+        app:layout_constraintStart_toStartOf="@+id/txtCategory"
+        app:layout_constraintTop_toBottomOf="@+id/txtCategory" />
+
+    <Spinner
+        android:id="@+id/spinnerVendors"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        android:layout_marginBottom="13dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintEnd_toEndOf="@+id/checkBoxPaid"
+        app:layout_constraintStart_toStartOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/txtVendor" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:text="@string/amount"
+        app:layout_constraintBottom_toTopOf="@+id/edtAmount"
+        app:layout_constraintStart_toStartOf="@+id/edtAmount"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerVendors" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="27dp"
+        android:layout_marginBottom="17dp"
+        android:text="@string/purchase_date"
+        app:layout_constraintBottom_toTopOf="@+id/edtDate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtAmount" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="27dp"
+        android:layout_marginBottom="18dp"
+        android:text="@string/comments"
+        app:layout_constraintBottom_toTopOf="@+id/edtComments"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtDate" />
+
     <EditText
         android:id="@+id/edtTitle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="14dp"
         android:background="@drawable/edt_background"
         android:ems="10"
         android:hint="@string/write_your_title"
@@ -25,122 +122,106 @@
         android:textColorHint="#A5A5A5"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/txtCategory"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/spinnerCategories"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginBottom="18dp"
-        android:text="@string/amount"
-        app:layout_constraintBottom_toTopOf="@+id/edtAmount"
-        app:layout_constraintStart_toStartOf="@+id/edtAmount"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerVendors" />
-
-    <TextView
-        android:id="@+id/txtVendor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginBottom="10dp"
-        android:text="@string/vendor"
-        app:layout_constraintBottom_toTopOf="@+id/spinnerVendors"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerCategories" />
+    <EditText
+        android:id="@+id/edtDate"
+        android:layout_width="180dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="19dp"
+        android:background="@drawable/edt_background"
+        android:clickable="false"
+        android:ems="10"
+        android:focusable="false"
+        android:hint="@string/select_date"
+        android:inputType="text"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:textColorHint="#A5A5A5"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView10"
+        app:layout_constraintEnd_toEndOf="@+id/textView9"
+        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
         android:id="@+id/txtCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="13dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginBottom="14dp"
         android:text="@string/category"
         app:layout_constraintBottom_toTopOf="@+id/spinnerCategories"
-        app:layout_constraintStart_toStartOf="@+id/edtTitle"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtTitle" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
-        android:layout_marginBottom="16dp"
-        android:text="Title"
-        app:layout_constraintBottom_toTopOf="@+id/edtTitle"
-        app:layout_constraintStart_toStartOf="@+id/edtTitle"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edtAmount"
-        android:layout_width="130dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="27dp"
         android:background="@drawable/edt_background"
         android:ems="10"
-        android:hint="Amount"
+        android:hint="@string/Amount"
         android:inputType="numberDecimal"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:textColorHint="#A5A5A5"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/textView9"
-        app:layout_constraintStart_toStartOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
-    <Spinner
-        android:id="@+id/spinnerVendors"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-
-        android:layout_marginBottom="28dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintStart_toStartOf="@+id/txtVendor"
-        app:layout_constraintTop_toBottomOf="@+id/txtVendor" />
-
-    <Spinner
-        android:id="@+id/spinnerCategories"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-
-        android:layout_marginBottom="29dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtVendor"
-        app:layout_constraintEnd_toEndOf="@+id/spinnerVendors"
-        app:layout_constraintStart_toStartOf="@+id/txtCategory"
-        app:layout_constraintTop_toBottomOf="@+id/txtCategory" />
-
-    <EditText
-        android:id="@+id/edtDate"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="267dp"
-        android:background="@drawable/edt_background"
-        android:clickable="false"
-        android:ems="10"
-        android:focusable="false"
-        android:hint="@string/select_date"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:textColorHint="#A5A5A5"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/edtAmount"
-        app:layout_constraintStart_toStartOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintEnd_toStartOf="@+id/checkBoxPaid"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        tools:ignore="Autofill,DuplicateSpeakableTextCheck" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/txtVendor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginBottom="17dp"
-        android:text="Purchase date"
-        app:layout_constraintBottom_toTopOf="@+id/edtDate"
+        android:layout_marginBottom="16dp"
+        android:text="@string/vendor"
+        app:layout_constraintBottom_toTopOf="@+id/spinnerVendors"
+        app:layout_constraintStart_toStartOf="@+id/spinnerVendors"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerCategories" />
+
+    <CheckBox
+        android:id="@+id/checkBoxPaid"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="89dp"
+        android:text="@string/Paid"
+        app:layout_constraintBaseline_toBaselineOf="@+id/edtAmount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/edtAmount" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="27dp"
+        android:layout_marginBottom="13dp"
+        android:text="Title"
+        app:layout_constraintBottom_toTopOf="@+id/edtTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtAmount" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <Button
+        android:id="@+id/btnCancel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="27dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/btnlog"
+        android:text="@string/cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnGuardar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtComments" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
