arreglado bugs en createBills

--- a/app/src/main/res/layout/activity_my_bills.xml
+++ b/app/src/main/res/layout/activity_my_bills.xml
@@ -28,10 +28,10 @@
         <Button
             android:id="@+id/button1"
             style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="95dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="@string/incoming"
-            android:textSize="8sp"
+            android:textSize="10sp"
             app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button2"
@@ -40,10 +40,10 @@
         <Button
             android:id="@+id/button2"
             style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="95dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="@string/due"
-            android:textSize="8sp"
+            android:textSize="10sp"
             app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
             app:layout_constraintStart_toEndOf="@+id/button1"
             app:layout_constraintEnd_toStartOf="@+id/button3"
@@ -52,10 +52,10 @@
         <Button
             android:id="@+id/button3"
             style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="95dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="@string/reocurring"
-            android:textSize="8sp"
+            android:text="@string/recurring"
+            android:textSize="10sp"
             app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
             app:layout_constraintStart_toEndOf="@+id/button2"
             app:layout_constraintEnd_toStartOf="@+id/button4"
@@ -64,10 +64,10 @@
         <Button
             android:id="@+id/button4"
             style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="95dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="@string/paid"
-            android:textSize="8sp"
+            android:textSize="10sp"
             app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
             app:layout_constraintStart_toEndOf="@+id/button3"
             app:layout_constraintEnd_toEndOf="parent"
