--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -9,10 +9,10 @@
     android:layout_margin="16dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="356dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginVertical="6dp"
+        android:layout_marginStart="16dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -28,21 +28,19 @@
                 android:text="@string/TiTle"
                 android:textColor="@color/black"
                 android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/textviewTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textviewTitle"
                 android:layout_marginStart="8dp"
                 android:text="Arya"
                 android:textColor="@color/black"
-                android:textSize="12sp"/>
-
+                android:textSize="12sp" />
 
 
         </LinearLayout>
-
 
 
         <LinearLayout
@@ -58,17 +56,16 @@
                 android:text="@string/CaTegory"
                 android:textColor="@color/black"
                 android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/textviewCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textviewCategory"
                 android:layout_marginStart="8dp"
                 android:text="Education"
                 android:textColor="@color/black"
-                android:textSize="12sp"/>
-
+                android:textSize="12sp" />
 
 
         </LinearLayout>
@@ -77,29 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/vEndor"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textviewVendor"
-                android:layout_marginStart="8dp"
-                android:text="Other"
-                android:textColor="@color/black"
-                android:textSize="12sp"/>
-
-
-
-        </LinearLayout>
+            android:orientation="horizontal" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -114,17 +89,16 @@
                 android:text="@string/aMount"
                 android:textColor="@color/black"
                 android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/textviewAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textviewAmount"
                 android:layout_marginStart="8dp"
                 android:text="$1200"
                 android:textColor="@color/black"
-                android:textSize="12sp"/>
-
+                android:textSize="12sp" />
 
 
         </LinearLayout>
@@ -133,29 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/pAid"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textviewPaid"
-                android:layout_marginStart="8dp"
-                android:text="No"
-                android:textColor="@color/black"
-                android:textSize="12sp"/>
-
-
-
-        </LinearLayout>
+            android:orientation="horizontal" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -170,50 +122,19 @@
                 android:text="@string/purchase_Date"
                 android:textColor="@color/black"
                 android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/textviewDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textviewDate"
                 android:layout_marginStart="8dp"
                 android:text="1/6/2024"
                 android:textColor="@color/black"
-                android:textSize="12sp"/>
-
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/commentts"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textviewComments"
-                android:layout_marginStart="8dp"
-                android:text=""
-                android:textColor="@color/black"
-                android:textSize="12sp"/>
-
+                android:textSize="12sp" />
 
 
         </LinearLayout>
-
-
 
 
     </LinearLayout>
