--- a/app/src/main/res/layout/activity_create_bill.xml
+++ b/app/src/main/res/layout/activity_create_bill.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_blue1"
     tools:context=".createBill">
 
     <Button
@@ -29,6 +30,7 @@
         android:layout_marginBottom="9dp"
         android:text="@string/create_new_bill"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +40,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="17dp"
-        android:background="@drawable/edt_background"
+        android:background="@drawable/rounded_frame_background"
         android:ems="10"
         android:hint="@string/write_your_comments"
         android:inputType="text"
@@ -57,6 +59,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="11dp"
+        android:background="@drawable/rounded_frame_background"
         app:layout_constraintBottom_toTopOf="@+id/txtVendor"
         app:layout_constraintEnd_toEndOf="@+id/spinnerVendors"
         app:layout_constraintStart_toStartOf="@+id/txtCategory"
@@ -67,6 +70,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="9dp"
+        android:background="@drawable/rounded_frame_background"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="@+id/checkBoxPaid"
         app:layout_constraintStart_toStartOf="@+id/txtVendor"
@@ -87,6 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="9dp"
         android:text="@string/purchase_date"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/edtDate"
         app:layout_constraintStart_toStartOf="@+id/edtDate"
         app:layout_constraintTop_toBottomOf="@+id/edtAmount" />
@@ -97,6 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="@string/comments"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/edtComments"
         app:layout_constraintStart_toStartOf="@+id/edtDate"
         app:layout_constraintTop_toBottomOf="@+id/edtDate" />
@@ -106,7 +112,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="11dp"
-        android:background="@drawable/edt_background"
+        android:background="@drawable/rounded_frame_background"
         android:ems="10"
         android:hint="@string/write_your_title"
         android:inputType="text"
@@ -127,7 +133,7 @@
         android:layout_marginStart="27dp"
         android:layout_marginEnd="21dp"
         android:layout_marginBottom="12dp"
-        android:background="@drawable/edt_background"
+        android:background="@drawable/rounded_frame_background"
         android:clickable="false"
         android:ems="10"
         android:focusable="false"
@@ -149,6 +155,7 @@
         android:layout_marginStart="27dp"
         android:layout_marginBottom="9dp"
         android:text="@string/category"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/spinnerCategories"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtTitle" />
@@ -160,7 +167,7 @@
         android:layout_marginStart="27dp"
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="14dp"
-        android:background="@drawable/edt_background"
+        android:background="@drawable/rounded_frame_background"
         android:ems="10"
         android:hint="@string/Amount"
         android:inputType="numberDecimal"
@@ -181,6 +188,7 @@
         android:layout_marginStart="27dp"
         android:layout_marginBottom="9dp"
         android:text="@string/vendor"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/spinnerVendors"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinnerCategories" />
@@ -201,6 +209,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="Title"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/edtTitle"
         app:layout_constraintStart_toStartOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -236,6 +245,7 @@
         android:layout_marginStart="2dp"
         android:layout_marginBottom="9dp"
         android:text="Repeat"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/spinnerRepeat"
         app:layout_constraintStart_toStartOf="@+id/edtComments"
         app:layout_constraintTop_toBottomOf="@+id/edtComments" />
@@ -245,6 +255,7 @@
         android:layout_width="200dp"
         android:layout_height="0dp"
         android:layout_marginBottom="26dp"
+        android:background="@drawable/rounded_frame_background"
         app:layout_constraintBottom_toTopOf="@+id/btnCancel"
         app:layout_constraintStart_toStartOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
