--- a/app/src/main/res/layout/activity_create_bill.xml
+++ b/app/src/main/res/layout/activity_create_bill.xml
@@ -83,6 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/amount"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/edtAmount"
         app:layout_constraintStart_toStartOf="@+id/edtAmount"
         app:layout_constraintTop_toBottomOf="@+id/autoCompleteVendors" />
